<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_action_add"
            android:title="@string/add" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/ic_action_delete"
            android:title="@string/delete" />
        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_Email"
            android:icon="@drawable/ic_action_email"
            android:title="@string/email" />
        <item
            android:id="@+id/nav_SMS"
            android:icon="@drawable/ic_action_sms"
            android:title="@string/send_text" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
            <item
                android:id="@+id/nav_addSub"
                android:icon="@drawable/ic_action_add"
                android:title="@string/add1" />
            <item
                android:id="@+id/nav_deleteSub"
                android:icon="@drawable/ic_action_delete"
                android:title="@string/delete1" />
        </menu>
    </item>

</menu>
